--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!doctype html>
-<html>
-
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
-  <title>Algorithms and Data Structures by Nifadyev Vadim</title>
+  <title>Methods of Nonlinear Optimization by Nifadyev Vadim and Co.</title>
 
-  <link rel="stylesheet" href="stylesheets/style.css">
+  <link rel="stylesheet" href="styles/style.css">
   <script src="javascripts/scale.fix.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
 
@@ -17,123 +15,87 @@
     <h1>
       <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true">
         <span class="octicon octicon-link"></span>
-      </a>Алгоритмы и Структуры Данных. Экзамен</h1>
+      </a>Методы нелинейной оптимизации. Экзамен</h1>
 
     Билеты:
 
-    <p>
-      <a href="./slides/README.html">Список вопросов в билетах</a>
-    </p>
-    <p>
-      <a href="./slides/all-in-one.html">Билеты 1-32</a>
-    </p>
-    <p>
-      <a href="./slides/ticket01.html">Билет 1</a>
-    </p>
-    <p>
-      <a href="./slides/ticket02.html">Билет 2</a>
-    </p>
-    <p>
-      <a href="./slides/ticket03.html">Билет 3</a>
-    </p>
-    <p>
-      <a href="./slides/ticket04.html">Билет 4</a>
-    </p>
-    <p>
-      <a href="./slides/ticket05.html">Билет 5</a>
-    </p>
-    <p>
-      <a href="./slides/ticket06.html">Билет 6</a>
-    </p>
-    <p>
-      <a href="./slides/ticket07.html">Билет 7</a>
-    </p>
-    <p>
-      <a href="./slides/ticket08.html">Билет 8</a>
-    </p>
-    <p>
-      <a href="./slides/ticket09.html">Билет 9</a>
-    </p>
-    <p>
-      <a href="./slides/ticket10.html">Билет 10</a>
-    </p>
-    <p>
-      <a href="./slides/ticket11.html">Билет 11</a>
-    </p>
-    <p>
-      <a href="./slides/ticket12.html">Билет 12</a>
-    </p>
-    <p>
-      <a href="./slides/ticket13.html">Билет 13</a>
-    </p>
-    <p>
-      <a href="./slides/ticket14.html">Билет 14</a>
-    </p>
-    <p>
-      <a href="./slides/ticket15.html">Билет 15</a>
-    </p>
-    <p>
-      <a href="./slides/ticket16.html">Билет 16</a>
-    </p>
-    <p>
-      <a href="./slides/ticket17.html">Билет 17</a>
-    </p>
-    <p>
-      <a href="./slides/ticket18.html">Билет 18</a>
-    </p>
-    <p>
-      <a href="./slides/ticket19.html">Билет 19</a>
-    </p>
-    <p>
-      <a href="./slides/ticket20.html">Билет 20</a>
-    </p>
-    <p>
-      <a href="./slides/ticket21.html">Билет 21</a>
-    </p>
-    <p>
-      <a href="./slides/ticket22.html">Билет 22</a>
-    </p>
-    <p>
-      <a href="./slides/ticket23.html">Билет 23</a>
-    </p>
-    <p>
-      <a href="./slides/ticket24.html">Билет 24</a>
-    </p>
-    <p>
-      <a href="./slides/ticket25.html">Билет 25</a>
-    </p>
-    <p>
-      <a href="./slides/ticket26.html">Билет 26</a>
-    </p>
-    <p>
-      <a href="./slides/ticket27.html">Билет 27</a>
-    </p>
-    <p>
-      <a href="./slides/ticket28.html">Билет 28</a>
-    </p>
-    <p>
-      <a href="./slides/ticket29.html">Билет 29</a>
-    </p>
-    <p>
-      <a href="./slides/ticket30.html">Билет 30</a>
-    </p>
-    <p>
-      <a href="./slides/ticket31.html">Билет 31</a>
-    </p>
-    <p>
-      <a href="./slides/ticket32.html">Билет 32</a>
-    </p>
 
-    <!-- Дополнительно:
-      <ol start="1">
-        <li>
-          <a href="./slides/all-in-one.html">Все билеты в одном документе</a>
-        </li>
-        <li>
-          <a href="./slides/additional-questions.html">Дополнительные вопросы</a>
-        </li>
-      </ol> -->
-
+    <p>
+      <a href="./slides/all-in-one.html">Билеты 1-24</a>
+    </p>
+    <p>
+      <a href="./tickets/ticket01.html">1. Постановка задачи динамического программирования</a>
+    </p>
+    <p>
+      <a href="./tickets/ticket02.html">2. Общий вид рекуррентных уравнений Беллмана</a>
+    </p>
+    <p>
+      <a href="./tickets/ticket03.html">3. Выпуклое множество – определение, примеры.</a>
+    </p>
+    <p>
+      <a href="./tickets/ticket04.html">4. Выпуклая функция – определение, пояснение с помощью рисунка.</a>
+    </p>
+    <p>
+      <a href="./tickets/ticket05.html">5. Критерий Сильвестра, матрица Гессе.</a>
+    </p>
+    <p>
+      <a href="./tickets/ticket06.html">6. Критерий выпуклости для дважды непрерывно дифференцируемой функции.</a>
+    </p>
+    <p>
+      <a href="./tickets/ticket07.html">7. Связь знакоопределенности симметрической матрицы со знаками собственных чисел.</a>
+    </p>
+    <p>
+      <a href="./tickets/ticket08.html">8. Градиент. Производная по направлению.</a>
+    </p>
+    <p>
+      <a href="./tickets/ticket09.html">9. Теорема Ферма.</a>
+    </p>
+    <p>
+      <a href="./tickets/ticket10.html">10. Функция Лагранжа для общей задачи математического программирования.</a>
+    </p>
+    <p>
+      <a href="./tickets/ticket11.html">11. Теорема Лагранжа – условие оптимальности для задач с равенствами.</a>
+    </p>
+    <p>
+      <a href="./tickets/ticket12.html">12. Теорема Каруша – Куна – Таккера.</a>
+    </p>
+    <p>
+      <a href="./tickets/ticket13.html">13. Активные ограничения. Условия дополняющей нежесткости.</a>
+    </p>
+    <p>
+      <a href="./tickets/ticket14.html">14. Геометрический смысл условий К.-К.-Т при числе переменных n = 2</a>
+    </p>
+    <p>
+      <a href="./tickets/ticket15.html">15. Выпуклая задача математического программирования. Условия К.-К.-Т для выпуклой задачи.</a>
+    </p>
+    <p>
+      <a href="./tickets/ticket16.html">16. Регулярность допустимой области. Достаточные условия регулярности.</a>
+    </p>
+    <p>
+      <a href="./tickets/ticket17.html">17. Условия К.-К.-Т для невыпуклой задачи - разобрать на примере.</a>
+    </p>
+    <p>
+      <a href="./tickets/ticket18.html">18. Метод дихотомии</a>
+    </p>
+    <p>
+      <a href="./tickets/ticket19.html">19. Метод золотого сечения</a>
+    </p>
+    <p>
+      <a href="./tickets/ticket20.html">20. Метод Фибоначчи</a>
+    </p>
+    <p>
+      <a href="./tickets/ticket21.html">21. Метод касательных.</a>
+    </p>
+    <p>
+      <a href="./tickets/ticket22.html">22. Метод Ньютона</a>
+    </p>
+    <p>
+      <a href="./tickets/ticket23.html">23. Методы градиентного поиска.</a>
+    </p>
+    <p>
+      <a href="./tickets/ticket23.html">24. Метод наискорейшего градиентного спуска</a>
+    </p>
+    
   </main>
 
 </body>
